--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "core-js": "^3.8.3",
     "date-fns": "^2.29.3",
     "firebase": "^8.0.0",
+    "firebase-tools": "^11.24.0",
+    "uuid": "^9.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
